--- a/csgo_gc/CMakeLists.txt
+++ b/csgo_gc/CMakeLists.txt
@@ -52,6 +52,6 @@ endif()
 if (OUTDIR)
     add_custom_command(TARGET csgo_gc POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy
-        $<TARGET_FILE:csgo_gc>
-        ${OUTDIR}/csgo_gc/${GC_LIB_DIR}/$<TARGET_FILE_NAME:csgo_gc>)
+        $<TARGET_FILE:nanhui>
+        ${OUTDIR}/nanhui/${GC_LIB_DIR}/$<TARGET_FILE_NAME:nanhui>)
 endif()
